# hssllvmsetup

./: LICENSE  README.md
assignment2-skeleton/: CMakeLists.txt
assignment2-skeleton/FunctionPrioritization/: CMakeLists.txt
assignment2-skeleton/FunctionPrioritization/src/: FunctionPrioritization.cpp
assignment2-skeleton/LimitLoopIterations/: CMakeLists.txt
assignment2-skeleton/LimitLoopIterations/src/: LimitLoopIterations.cpp
assignment2-skeleton/testcases/: func_call.c  func_call2.c
assignment2-skeleton/testcases/loop_iterations_limit/: loop_check.c  loop_check1.c
llvm-passes/: .gitignore  CMakeLists.txt  README.md  example.c
llvm-passes/InstrumentationPasses/LogMemAccess/src/: LogMemAccess.cpp
llvm-passes/SkeletonPass/: CMakeLists.txt
llvm-passes/SkeletonPass/src/: SkeletonPass.cpp
llvm-passes/StaticAnalysisPasses/: CMakeLists.txt
llvm-passes/StaticAnalysisPasses/CallGraph/: CMakeLists.txt
llvm-passes/StaticAnalysisPasses/CallGraph/src/: CallGraph.cpp
llvm-passes/StaticAnalysisPasses/FunctionIdentifier/src/: FunctionIdentifierPass.cpp
llvm-passes/StaticAnalysisPasses/GetLoopExitingBBs/src/: GetLoopExitingBBs.cpp
llvm-passes/StaticAnalysisPasses/StructAccessIdentifier/src/: StructAccessIdentifier.cpp
